# lumai-1750112878297-uet0zj

./: .env.example  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/launch/: page.tsx
app/profile/[wallet]/: page.tsx
app/token/[mint]/: page.tsx
components/: bonding-curve-chart.tsx  token-card.tsx  token-creation-form.tsx  trading-interface.tsx  transaction-history.tsx  wallet-connect.tsx
components/ui/: button.tsx  input.tsx
hooks/: use-program.ts  use-token-data.ts  use-wallet.ts
lib/: bonding-curve.ts  program-client.ts  token-metadata.ts  utils.ts
programs/pump-clone/: Anchor.toml  Cargo.toml
programs/pump-clone/src/: error.rs  lib.rs  state.rs
programs/pump-clone/src/instructions/: buy_tokens.rs  create_token.rs  mod.rs  sell_tokens.rs
types/: index.ts
