[package]
name = "pump-clone"
version = "0.1.0"
description = "A decentralized platform for launching meme tokens with automated bonding curves"
edition = "2021"
license = "MIT"
homepage = "https://github.com/your-org/pump-clone"
repository = "https://github.com/your-org/pump-clone"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump_clone"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
spl-token-metadata = "0.1.0"
mpl-token-metadata = "4.1.2"
solana-program = "1.18.0"
borsh = "0.10.3"
arrayref = "0.3.7"
num-derive = "0.4.0"
num-traits = "0.2.17"
thiserror = "1.0.50"
switchboard-v2 = "0.4.0"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
tokio = { version = "1.35.0", features = ["full"] }
anchor-client = "0.30.1"